Bare Bones HTML
We've organised sections and assigned them. These are the bare bones of the HTML.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@ maridon -- search bar left div
 quinton -- header
 mj -- snap shot display 
 tanner
-
+>
 
 -->
+<!DOCTYPE html>
+<html lang="en"></html>
+
+  <head>
+    <!-- Bootstrap link API LINKS-->
+
+  </head>
+
+  <body>
+
+    <!--Header Section - Quinton-->
+
+
+
+    <!-- DIV section for search button API-->
+
+
+
+
+    <!--DIV displaying the stuff-->
+
+
+
+
+    <!--Tannner has the footer-->
+
+
+  </body-->
+
+<!-- Footer -->
