Bare Bones HTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@ maridon -- search bar left div
 quinton -- header
 mj -- snap shot display 
 tanner
-
-
 -->
+
+
+HTML
+
+<Header>
+  
+<!--Qiunton>
+
+
+</Header>
+
+<Body>
+
+
+  <div>
+    <!-- Search Bar>
+  </div>
+
+
+  <div<
+  <!-- Display Inf>
+
+
+
+  <div> 
+  <!-- Gif section>
+
+  </div>
+
+
+</Body>
+
+
+
+<footer></footer>
