--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
+<!DOCTYPE html>
+<html lang="en"></html>
 
-<!--
-maridon -- search bar left div
-quinton -- header
-mj -- snap shot display 
-tanner
--->
-
-
-HTML
-
-<Header>
+<head>
+  <link rel="stylesheet" href="./assets/css/style.css">
   
-<!--Qiunton>
-
-
-</Header>
-
-<Body>
-
-
-  <div>
-    <!-- Search Bar>
+  
+  <title>Pokemon Storage</title>
+  
+</head>
+<body>
+  <header>
+    <h1>Quinton's Pokemon Storage header</h1>
+  </header>    
+  
+<!--MR-->
+  <div class="search-bar">
+    <h2> Maridon's Search bar</h2>
+    <input type="text" placeholder="Search...">
+    <button type="submit">Search</button>
   </div>
 
-
-  <div<
-  <!-- Display Inf>
-
-
-
-  <div> 
-  <!-- Gif section>
-
-  </div>
+<!--MJ-->
+  <section class="section">
+    <div class="column1">
+      <h2>Maya - Display of Searched info</h2>
+      <p>This is the content of column 1.</p>
+    </div>
 
 
-</Body>
+<!--TM-->
+    <div class="column2">
+      <h2>TM - Display of Gifs
+      </h2>
+      <p>This is the content of column 2.</p>
+    </div>
+  </section>
 
+  
+</body>
 
+<script src="./Assets/js/script.js"></script>
+     
 
-<footer></footer>
+<footer>
+  <!--Quinton-->
+  <p>&copy; This is Quinton's Section too</p>
+</footer>
+
+</html>
