--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="section">
     <div class="column1">
       <h2>Maya - Display of Searched info</h2>
-      <p>This is the content of column 1.</p>
+      <p>search for pokemon to see results</p>
     </div>
 
 
