API datasource variable

--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
+
+</html>
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  
-  
   <title>Pokemon Storage</title>
-  
 </head>
+
 <body>
   <header>
     <h1>Quinton's Pokemon Storage header</h1>
-  </header>    
-  
-<!--MR-->
+  </header>
+
+  <!--MR-->
   <div class="search-bar">
     <h2> Maridon's Search bar</h2>
     <input type="text" placeholder="Search...">
     <button type="submit">Search</button>
   </div>
 
-<!--MJ-->
+
+
+  <!--MJ-->
   <section class="section">
     <div class="column1">
       <h2>Maya - Display of Searched info</h2>
       <p>search for pokemon to see results</p>
+
+      <span id="pokename"></span>
+  
+  
+
     </div>
 
 
-<!--TM-->
+    <!--TM-->
     <div class="column2">
       <h2>TM - Display of Gifs
       </h2>
@@ -36,15 +43,15 @@
     </div>
   </section>
 
-  
+
 </body>
 
 <script src="./Assets/js/script.js"></script>
-     
+
 
 <footer>
   <!--Quinton-->
   <p>&copy; This is Quinton's Section too</p>
 </footer>
 
-</html>
+</html>.
