QUINTON push from mj computer

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 </html>
-
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Pokemon Storage</title>
+<!--Added Pikachu Background-->
 </head>
+<body class= "header-image">
+  <header  style="background-image: url('pikachu.png');">
+    <h1>Welcome to PokeGiphy!</h1>
+  </header>
 
 <body>
   <header>
