Added Image to the header

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  
+  <title>Pokemon Storage</title>
+<!--Added Pikachu Background-->
+
   
   <title>Pokemon Storage</title>
   
 </head>
-<body>
-  <header>
-    <h1>Quinton's Pokemon Storage header</h1>
-  </header>    
-  
+<body class= "header-image">
+  <header  style="background-image: url('pikachu.png');">
+    <h1>Welcome to PokeGiphy!</h1>
+  </header>
+
 <!--MR-->
   <div class="search-bar">
     <h2> Maridon's Search bar</h2>
