worked on search button and api, formatted css

--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   
   
-  <title>Pokemon Storage</title>
+  <title>Pokémon ポケットモンスタ Storage // </title>
   
 </head>
 <body>
   <header>
-    <h1>Quinton's Pokemon Storage header</h1>
+    <h1>Pokémon Giphy</h1>
   </header>    
   
-<!--MR-->
-  <div class="search-bar">
-    <h2> Maridon's Search bar</h2>
-    <input type="text" placeholder="Search...">
-    <button type="submit">Search</button>
-  </div>
+  <!--MARIDON-->
+     <section1>
+      <div class="search-bar">
+        <h2>ポケットモンスタ Pokémon Search Bar</h2>
+        <div class="photo-container">
+          <div id="poke-search" class="btn">
+            <input type="text" id="pokeInput" placeholder="Search Pokemon">
+            <button id="searchButton" class="btn">Search</button>
+            <div id="resultContainer"></div>
+          </div>
+        </div>
+      </div>
+    </section1>
+  <!--MARIDON-->
+
 
 <!--MJ-->
   <section class="section">
