Changed the title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--Added Pikachu Background-->
 
   
-  <title>Pokemon Storage</title>
+  <title>PokeGiphy</title>
   
 </head>
 <body class= "header-image">
