--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 </html>
+
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Pokemon Storage</title>
+  <title>Pokémon ポケットモンスタ Storage // </title>
 <!--Added Pikachu Background-->
 </head>
 <body class= "header-image">
@@ -13,7 +13,24 @@
   </header>
 
 <body>
-  <header>
+     
+  
+  <!--MARIDON-->
+     <section1>
+      <div class="search-bar">
+        <h2>ポケットモンスタ Pokémon Search Bar</h2>
+        <div class="photo-container">
+          <div id="poke-search" class="btn">
+            <input type="text" id="pokeInput" placeholder="Search Pokemon">
+            <button id="searchButton" class="btn">Search</button>
+            <div id="resultContainer"></div>
+          </div>
+        </div>
+      </div>
+    </section1>
+  <!--MARIDON-->
+
+
     <h1>Quinton's Pokemon Storage header</h1>
   </header>
 
@@ -23,6 +40,7 @@
     <input type="text" placeholder="Search...">
     <button type="submit">Search</button>
   </div>
+
 
 
 
