Added notes and updated css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Pokemon Storage</title>
+  <title>PokeGiphy</title>
 <!--Added Pikachu Background-->
 
   
@@ -41,7 +41,7 @@
   
 </body>
 
-<script src="./Assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
      
 
 <footer>
