Updated the footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <footer>
   <!--Quinton-->
-  <p>&copy; This is Quinton's Section too</p>
+  <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman || Copyright 2023</p>
 </footer>
 
 </html>
