--- a/index.html
+++ b/index.html
@@ -1,63 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-</html>
+<html lang="en"></html>
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Pokémon ポケットモンスタ Storage // </title>
-<!--Added Pikachu Background-->
-</head>
-<body class= "header-image">
-  <header  style="background-image: url('pikachu.png');">
-    <h1>Welcome to PokeGiphy!</h1>
-  </header>
-
-<body>
-     
   
-  <!--MARIDON-->
-     <section1>
-      <div class="search-bar">
-        <h2>ポケットモンスタ Pokémon Search Bar</h2>
-        <div class="photo-container">
-          <div id="poke-search" class="btn">
-            <input type="text" id="pokeInput" placeholder="Search Pokemon">
-            <button id="searchButton" class="btn">Search</button>
-            <div id="resultContainer"></div>
-          </div>
-        </div>
-      </div>
-    </section1>
-  <!--MARIDON-->
-
-
+  
+  <title>Pokemon Storage</title>
+  
+</head>
+<body>
+  <header>
     <h1>Quinton's Pokemon Storage header</h1>
-  </header>
-
-  <!--MR-->
+  </header>    
+  
+<!--MR-->
   <div class="search-bar">
     <h2> Maridon's Search bar</h2>
     <input type="text" placeholder="Search...">
     <button type="submit">Search</button>
   </div>
 
-
-
-
-  <!--MJ-->
+<!--MJ-->
   <section class="section">
     <div class="column1">
       <h2>Maya - Display of Searched info</h2>
-      <p>search for pokemon to see results</p>
-
-      <span id="pokename"></span>
-  
-  
-
+      <p>This is the content of column 1.</p>
     </div>
 
 
-    <!--TM-->
+<!--TM-->
     <div class="column2">
       <h2>TM - Display of Gifs
       </h2>
@@ -65,15 +36,15 @@
     </div>
   </section>
 
-
+  
 </body>
 
 <script src="./Assets/js/script.js"></script>
-
+     
 
 <footer>
   <!--Quinton-->
   <p>&copy; This is Quinton's Section too</p>
 </footer>
 
-</html>.
+</html>
