--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en"></html>
 
 <head>
-  <link rel="stylesheet" href="./assets/css/style.css">
-  
-  
-  <title>Pokémon ポケットモンスタ Storage // </title>
+  <link rel="stylesheet" href="./assets/css/style.css">  
+  <title>Pokémon ポケットモンスタ Storage //</title>
   
 </head>
 <body>
@@ -14,7 +12,7 @@
   </header>    
   
   <!--MARIDON-->
-     <section1>
+     <section>
       <div class="search-bar">
         <h2>ポケットモンスタ Pokémon Search Bar</h2>
         <div class="photo-container">
@@ -25,7 +23,7 @@
           </div>
         </div>
       </div>
-    </section1>
+    </section>
   <!--MARIDON-->
 
 
