body and footer fill page. TM section rmvd

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-</html>
+
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Pokémon ポケットモンスタ Storage // </title>
-<!--Added Pikachu Background-->
+  <!--Added Pikachu Background-->
 
 </head>
-<body>
-     
-  
-  <!--MARIDON-->
-     <section1>
+
+<body class="header-image">
+  <header style="background-image: url('pikachu.png');">
+    <h1>Welcome to PokeGiphy!</h1>
+  </header>
+
+  <body>
+
+
+    <!--MARIDON-->
+    <section1>
       <div class="search-bar">
         <h2>ポケットモンスタ Pokémon Search Bar</h2>
         <div class="photo-container">
@@ -24,46 +30,37 @@
         </div>
       </div>
     </section1>
-  <!--MARIDON-->
+    <!--MARIDON-->
 
 
-    <h1>Quinton's Pokemon Storage header</h1>
-  </header>    
-  
-<!--MR-->
-  <div class="search-bar">
-    <h2> Maridon's Search bar</h2>
-    <input type="text" placeholder="Search...">
-    <button type="submit">Search</button>
-  </div>
+
+    <!--MJ-->
+    <section class="section">
+      <span id="pokename"></span>
+      <div>
+        <h2>Maya - Display of Searched info</h2>
+        <p>search for pokemon to see results</p>
+      </div>
+
+      <div>
+        <h2>TM - Display of Gifs
+        </h2>
+        <p>This is the content of column 2.</p>
+
+      </div>
+    </section>
+
+  </body>
 
 
-  <!--MJ-->
-
-  <section class="section">
-    <div class="column1">
-      <h2>Maya - Display of Searched info</h2>
-      <p>This is the content of column 1.</p>
-    </div>
 
 
-<!--TM-->
-    <div class="column2">
-      <h2>TM - Display of Gifs
-      </h2>
-      <p>This is the content of column 2.</p>
-    </div>
-  </section>
+  <footer>
 
-  
-</body>
+    <!--Quinton-->
+    <p>&copy; This is Quinton's Section too</p>
 
-<script src="./Assets/js/script.js"></script>
-     
-
-<footer>
-  <!--Quinton-->
-  <p>&copy; This is Quinton's Section too</p>
-</footer>
+  </footer>
+  <script src="./Assets/js/script.js"></script>
 
 </html>
