Added additional API pathways, trying to integrate, minimal functionality. Incomplete integration

--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-</html>
+<html lang="en"></html>
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">  
   <title>Pokémon ポケットモンスタ Storage //</title>
   
 </head>
-<body class= "header-image">
-  <header  style="background-image: url('pikachu.png');">
-    <h1>Welcome to PokeGiphy!</h1>
-  </header>
-
 <body>
-     
+  <header>
+    <h1>Pokémon Giphy</h1>
+  </header>    
   
   <!--MARIDON-->
      <section>
@@ -35,12 +31,11 @@
   <section class="section">
     <div class="column1">
       <h2>Maya - Display of Searched info</h2>
-      <p>search for pokemon to see results</p>
-      <span id="pokename"></span>
+      <p>This is the content of column 1.</p>
     </div>
 
 
-    <!--TM-->
+<!--TM-->
     <div class="column2">
       <h2>TM - Display of Gifs
       </h2>
@@ -48,15 +43,15 @@
     </div>
   </section>
 
-
+  
 </body>
 
 <script src="./Assets/js/script.js"></script>
-
+     
 
 <footer>
   <!--Quinton-->
   <p>&copy; This is Quinton's Section too</p>
 </footer>
 
-</html>.
+</html>
