back to square 2 - working search bar and appends

--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en"></html>
 
 <head>
-
   <link rel="stylesheet" href="./assets/css/style.css">  
   <title>Pokémon ポケットモンスタ Storage //</title>
   
-</head>
-<body class= "header-image">
-  <header  style="background-image: url('pikachu.png');">
-    <h1>Welcome to PokeGiphy!</h1>
-  </header>
-
 </head>
 <body>
   <header>
@@ -19,9 +12,7 @@
   </header>    
   
   <!--MARIDON-->
-
-     <section1>
-
+     <section>
       <div class="search-bar">
         <h2>ポケットモンスタ Pokémon Search Bar</h2>
         <div class="photo-container">
@@ -32,7 +23,6 @@
           </div>
         </div>
       </div>
-
     </section>
   <!--MARIDON-->
 
@@ -43,11 +33,6 @@
       <h2>Maya - Display of Searched info</h2>
       <p>This is the content of column 1.</p>
     </div>
-      <p>search for pokemon to see results</p>
-      <span id="pokename"></span>
-
-    </section>
- 
 
 
 <!--TM-->
@@ -59,18 +44,14 @@
   </section>
 
   
-  
 </body>
 
 <script src="./Assets/js/script.js"></script>
-     
      
 
 <footer>
   <!--Quinton-->
   <p>&copy; This is Quinton's Section too</p>
 </footer>
-
-</html>
 
 </html>
