Added Quinton's work from up to yesterday

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en"></html>
 
 <head>
-  <link rel="stylesheet" href="./assets/css/style.css">  
-  <title>Pokémon ポケットモンスタ Storage //</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>PokeGiphy</title>
+<!--Added Pikachu Background-->
+
+  
+  <title>PokeGiphy</title>
   
 </head>
-<body>
-  <header>
-    <h1>Pokémon Giphy</h1>
-  </header>    
+<body class= "header-image">
+  <header  style="background-image: url(./assets/images/pikachu.png);">
+    <h1>Welcome to PokeGiphy!</h1>
+  </header> 
   
   <!--MARIDON-->
      <section>
@@ -35,7 +39,7 @@
     </div>
 
 
-<!--TM-->
+<!--GIPHY-->
     <div class="column2">
       <h2>TM - Display of Gifs
       </h2>
@@ -51,7 +55,7 @@
 
 <footer>
   <!--Quinton-->
-  <p>&copy; This is Quinton's Section too</p>
+  <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman || Copyright 2023</p>
 </footer>
 
 </html>
