about to merge the develop branch.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>PokeGiphy</title>
-<!--Added Pikachu Background-->
-
   
-  <title>PokeGiphy</title>
+  <title>PokéGiphy</title>
   
 </head>
 <body class= "header-image">
   <header  style="background-image: url(./assets/images/pikachu.png);">
-    <h1>Welcome to PokeGiphy!</h1>
+    <h1>Welcome to PokéGiphy!</h1>
   </header> 
   
   <!--MARIDON-->
@@ -41,7 +38,7 @@
 
 <!--GIPHY-->
     <div class="column2">
-      <h2>TM - Display of Gifs
+      <h2>Display of Gifs
       </h2>
       <p>This is the content of column 2.</p>
     </div>
