--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <section class="section">
       <span id="pokename"></span>
       <div>
+        <p></p>
         <h2>Maya - Display of Searched info</h2>
         <p>search for pokemon to see results</p>
       </div>
@@ -52,15 +53,13 @@
 
   </body>
 
-
-
-
   <footer>
 
     <!--Quinton-->
     <p>&copy; This is Quinton's Section too</p>
 
   </footer>
+  
   <script src="./Assets/js/script.js"></script>
-
+  <script src="./Assets/js/gif.js"></script>
 </html>
