single out column and fix css

--- a/index.html
+++ b/index.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
+
+</html>
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-  
+
   <title>PokéGiphy</title>
-  
+
 </head>
-<body class= "header-image">
-  <header  style="background-image: url(./assets/images/pikachu.png);">
+
+<body>
+  <section class="section-header">
+  <header style="background-image: url(./assets/images/pikachu.png);">
     <h1>Welcome to PokéGiphy!</h1>
-  </header> 
-  
+  </header>
+  </section>
+
   <!--MARIDON-->
-     <section>
-      <div class="search-bar">
-        <h2>ポケットモンスタ Pokémon Search Bar</h2>
-        <div class="photo-container">
-          <div id="poke-search" class="btn">
-            <input type="text" id="pokeInput" placeholder="Search Pokemon">
-            <button id="searchButton" class="btn">Search</button>
-            <div id="resultContainer"></div>
-          </div>
+  <section>
+    <div class="search-bar">
+      <h2>ポケットモンスタ Pokémon Search Bar</h2>
+      <div class="photo-container">
+        <div id="poke-search" class="btn">
+          <input type="text" id="pokeInput" placeholder="Search Pokemon">
+          <button id="searchButton" class="btn">Search</button>
+          <div id="resultContainer"></div>
         </div>
       </div>
+    </div>
 
-    </section1>
-    <!--MARIDON-->
+  </section>
+  <!--MARIDON-->
 
-
-
-    <!--MJ-->
-    <section class="section">
-      <span id="pokename"></span>
+  <!--MJ-->
+  <section class="column1">
+    <span id="">
       <div>
-        <p></p>
-        <h2>Maya - Display of Searched info</h2>
-        <p>search for pokemon to see results</p>
+        <h2>search for pokemon to see results</h2>
       </div>
 
       <div>
-        <h2>TM - Display of Gifs
-        </h2>
-        <p>This is the content of column 2.</p>
-
+        <h2>gif here</h2>
       </div>
-
-<!--MJ-->
-
-  
+    </span>
+  </section>
+  <!--MJ-->
 </body>
-
-<script src="./assets/js/script.js"></script>
 
 <footer>
   <!--Quinton-->
   <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman || Copyright 2023</p>
 </footer>
+
+<script src="./assets/js/script.js"></script>
 
 </html>
