--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-</html>
-
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
-
   <title>PokéGiphy</title>
-
 </head>
 
 <body>
   <section class="section-header">
-  <header style="background-image: url(./assets/images/pikachu.png);">
-    <h1>Welcome to PokéGiphy!</h1>
-  </header>
+    <header style="background-image: url(./assets/images/pikachu.png);">
+      <h1>Welcome to PokéGiphy!</h1>
+    </header>
   </section>
 
   <!--MARIDON-->
@@ -34,19 +30,22 @@
   <!--MARIDON-->
 
   <!--MJ-->
-  <section class="column1">
-    <span id="">
-      <div>
-        <h2>search for pokemon to see results</h2>
-      </div>
 
-      <div>
-        <h2>gif here</h2>
-      </div>
-    </span>
-  </section>
-  <!--MJ-->
-</body>
+  <main>
+    <section class="column1">
+      <span id="">
+        <div>
+          <h2>search for pokemon to see results</h2>
+        </div>
+
+        <div>
+          <h2>gif here</h2>
+        </div>
+      </span>
+    </section>
+    <!--MJ-->
+  </main>
+  </body>
 
 <footer>
   <!--Quinton-->
