The best I have done so far, search functions, in MJ's box, still need location encounter data to load.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div id="poke-search" class="btn">
             <input type="text" id="pokeInput" placeholder="Search Pokemon">
             <button id="searchButton" class="btn">Search</button>
-            <div id="resultContainer"></div>
+            
           </div>
         </div>
       </div>
@@ -33,6 +33,7 @@
     <div class="column1">
       <h2>Maya - Display of Searched info</h2>
       <p>This is the content of column 1.</p>
+      <div id="resultContainer"></div>
     </div>
 
 
@@ -44,6 +45,11 @@
     </div>
   </section>
 
+  <div>
+    <H1>What's this box doing here? GIF?
+      <div id="locationContainer"></div>
+    </H1>
+  </div>
   
 </body>
 
