--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="poke-search" class="btn">
           <input type="text" id="pokeInput" placeholder="Search Pokemon">
           <button id="searchButton" class="btn">Search</button>
-          <div id="resultContainer"></div>
+          
         </div>
       </div>
     </div>
@@ -34,6 +34,7 @@
   <main>
     <section class="column1">
       <span id="">
+        <div id="resultContainer" aria-placeholder="EnterPokemon to see Results"></div>
         <div>
           <h2>search for pokemon to see results</h2>
         </div>
