--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"></html>
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
+  
   <title>PokéGiphy</title>
+  
 </head>
-
-<body>
-  <section class="section-header">
-    <header style="background-image: url(./assets/images/pikachu.png);">
-      <h1>Welcome to PokéGiphy!</h1>
-    </header>
-  </section>
-
+<body class= "header-image">
+  <header  style="background-image: url(./assets/images/pikachu.png);">
+    <h1>Welcome to PokéGiphy!</h1>
+  </header> 
+  
   <!--MARIDON-->
      <section>
       <div class="search-bar">
@@ -32,25 +31,28 @@
 <!--MJ-->
   <section class="section">
     <div class="column1">
-      <h2>Maya - Display of Searched info</h2>
+      <h2>Display of Searched info</h2>
       <p>This is the content of column 1.</p>
       <div id="resultContainer"></div>
     </div>
 
-        <div>
-          <h2>gif here</h2>
-        </div>
-      </span>
-    </section>
-    <!--MJ-->
-  </main>
-  </body>
+
+<!--GIPHY-->
+    <div class="column2">
+      <h2>Display of Gifs
+      </h2>
+      <p>This is the content of column 2.</p>
+    </div>
+  </section>
+  
+</body>
+
+<script src="./assets/js/script.js"></script>
+     
 
 <footer>
   <!--Quinton-->
   <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman || Copyright 2023</p>
 </footer>
-
-<script src="./assets/js/script.js"></script>
 
 </html>
