--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <link rel="stylesheet" href="./assets/css/style.css">
+  <style>
+    .search-bar {
+      background-image: url('./assets/images/AnimeGrassland.jpg');
+      background-size: cover; 
+      background-position: center; 
+      background-repeat: no-repeat; 
+    }
+  </style>
   
   <title>PokéGiphy</title>
   
@@ -10,6 +18,7 @@
 <body class= "header-image">
   <header  style="background-image: url(./assets/images/pikachu.png);">
     <h1>Welcome to PokéGiphy!</h1>
+
   </header> 
   
   <!--MARIDON-->
