--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en"></html>
 
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> 
+  <!-- The link above is from Bootstrap CSS file version 5.3.0 -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <style>
     .search-bar {
@@ -17,8 +19,32 @@
 </head>
 <body class= "header-image">
   <header  style="background-image: url(./assets/images/pikachu.png);">
-    <h1>Welcome to PokéGiphy!</h1>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">PokéGiphy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="navbar-item">
+              <a class="navbar-link" href="#">Home</a>
+            </li>
+            <li class="navbar-item">
+              <a class="navbar-link" href="#">About</a>
+            </li>
+            <li class="navbar-item">
+              <a class="navbar-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav> 
+    <!-- This navbar was created using this page: https://getbootstrap.com/docs/5.3/components/navbar/ -->
+    <div class="title-bar">
+      <h1 class="title-text">Welcome to PokéGiphy!</h1>
+    </div>
   </header> 
   
   <!--MARIDON-->
@@ -29,13 +55,11 @@
           <div id="poke-search" class="btn">
             <input type="text" id="pokeInput" placeholder="Search Pokemon">
             <button id="searchButton" class="btn">Search</button>
-            
           </div>
         </div>
       </div>
     </section>
   <!--MARIDON-->
-
 
 <!--MJ-->
   <section class="section">
@@ -44,7 +68,6 @@
       <p>This is the content of column 1.</p>
       <div id="resultContainer"></div>
     </div>
-
 
 <!--GIPHY-->
     <div class="column2">
@@ -55,13 +78,13 @@
   </section>
   
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./assets/js/script.js"></script>
      
 
 <footer>
   <!--Quinton-->
-  <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman || Copyright 2023</p>
+  <p>&copy; June 2023 || Maridon Romney || MJ Thayne || Quinton Palfreyman</p>
 </footer>
 
 </html>
