fixed HTML to match Bootstrap Registry

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="navbar-item">
-              <a class="navbar-link" href="#">Home</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
             </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="#">About</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
             </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="#">Contact</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
         </div>
