footer fixed to 'fixed position'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section class="column1">
       <span id="">
-        <div id="resultContainer" aria-placeholder="EnterPokemon to see Results"></div>
+        <h3 id="resultContainer" placeholder="EnterPokemon to see Results">
         <div>
           <h2>search for pokemon to see results</h2>
         </div>
