--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
 
   <main>
     <section class="column1">
-      <span id="">
-        <h3 id="resultContainer" placeholder="EnterPokemon to see Results">
+      <span class="">
+        <ul class="list-group" id="resultContainer">
+          <li class="list-group-item" id="resultContainer"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+          <li class="list-group-item"></li>
+        </ul>
+        <!-- <h3  > -->
         <div>
           <h2>search for pokemon to see results</h2>
         </div>
