--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
 
   <main>
     <section class="column1">
-      <span class="">
-        <ul class="list-group" id="resultContainer">
-          <li class="list-group-item" id="resultContainer"></li>
-          <li class="list-group-item"></li>
-          <li class="list-group-item"></li>
-          <li class="list-group-item"></li>
-          <li class="list-group-item"></li>
-        </ul>
-        <!-- <h3  > -->
+      <span class="" id="resultContainer">
+        
         <div>
           <h2>search for pokemon to see results</h2>
         </div>
