pretty and stucl

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div id="poke-search" >
           <input type="text" id="pokeInput" placeholder="Search Pokemon">
           <button id="searchButton" class="btn">Search</button>
+          
         </div>
       </div>
     </div>
@@ -49,14 +50,15 @@
   <!--MJ-->
   
     <section class="column1">
-      <span class="" id="resultContainer">
+      <span class="text-center" id="resultContainer">
 
         <div>
           <h2>search for pokemon to see results</h2>
         </div>
 
         <div>
-          <img id="imgResults">
+  
+          <img id='pokeimages' src="{{pokeImage}}">
 
         </div>
         </div>
@@ -67,7 +69,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./assets/js/script.js"></script>
 
-<!-- <script src="./assets/js/Img.js"></script>  -->
+
 
 <footer>
   <!--Quinton-->
