--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div>
   
-          <img id='pokeimages' src="{{pokeImage}}">
+          <img id=''>
 
         </div>
         </div>
@@ -68,6 +68,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./assets/js/script.js"></script>
+<!-- <script src="./assets/js/Img.js"></script> -->
 
 
 
